Mount calendar data; Hugo no longer follows symlinks

--- a/config.yaml
+++ b/config.yaml
@@ -12,6 +12,11 @@ markup:
     renderer:
       unsafe: true
 
+module:
+  mounts:
+    source: calendars
+    target: data/calendars
+
 params:
   description: Community developed and owned ecosystem for scientific computing
 
