--- a/content/grants/sparse_arrays/team.toml
+++ b/content/grants/sparse_arrays/team.toml
@@ -1,29 +1,29 @@
 [[item]]
 type = 'card'
 classcard = 'text-center'
-header = 'Jarrod Millman'
-body = '''{{< image >}}
-src = 'https://avatars3.githubusercontent.com/u/123428'
-alt = 'Avatar of Jarrod Millman'
-{{< /image >}}'''
-link = 'https://github.com/jarrodmillman'
-
-[[item]]
-type = 'card'
-classcard = 'text-center'
-header = 'Stéfan van der Walt'
 body = '''{{< image >}}
 src = 'https://avatars3.githubusercontent.com/u/45071'
 alt = 'Avatar of Stéfan van der Walt'
-{{< /image >}}'''
+{{< /image >}}
+Stéfan van der Walt'''
 link = 'https://github.com/stefanv'
 
 [[item]]
 type = 'card'
 classcard = 'text-center'
-header = 'Dan Schult'
 body = '''{{< image >}}
 src = 'https://avatars.githubusercontent.com/u/915037'
 alt = 'Avatar of Dan Schult'
-{{< /image >}}'''
+{{< /image >}}
+Dan Schult'''
 link = 'https://github.com/dschult/'
+
+[[item]]
+type = 'card'
+classcard = 'text-center'
+body = '''{{< image >}}
+src = 'https://avatars3.githubusercontent.com/u/123428'
+alt = 'Avatar of Jarrod Millman'
+{{< /image >}}
+Jarrod Millman'''
+link = 'https://github.com/jarrodmillman'
