--- a/calendars/scipy.yaml
+++ b/calendars/scipy.yaml
@@ -66,7 +66,7 @@ events:
         days: 56
       until: 2025-01-01 00:00:00 +00:00
 
-  - summary: [CANCELED] Monthly SciPy New Contributor Meeting (Americas)
+  - summary: (CANCELED) Monthly SciPy New Contributor Meeting (Americas)
     description: |
       The monthly call for new contributors to SciPy 🎉
 
