--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -2,13 +2,13 @@ name: Contributor Experience Project Community Calendar
 events:
   - summary: Contributor Experience Project Community Call
     description: |
-      A weekly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
+      A monthly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
 
       Join us via Zoom: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
-    begin: 2024-05-03 13:30:00 +00:00
-    end: 2024-05-03 14:30:00 +00:00
+    begin: 2024-05-24 13:30:00 +00:00
+    end: 2024-05-24 14:30:00 +00:00
     url: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
     repeat:
       interval:
-        days: 14
+        days: 28
       until: 2025-01-01 00:00:00 +00:00
