Add a page that show how many backport the bot has made.

--- a/config.yaml
+++ b/config.yaml
@@ -100,3 +100,5 @@ params:
         links:
           - text: Press kit
             link: /press-kit
+          - text: Bot
+            link: /bot
