Add a link to the CEP meeting agenda and notes

--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -4,6 +4,9 @@ events:
     description: |
       A monthly meeting to discuss everything related to contributor experience. Everyone is welcome to attend and contribute to a conversation.
 
+      To add to the meeting agenda the topics you'd like to discuss,
+      follow the link: https://hackmd.io/QcgnpSe_SnWx7DmdkGCUSw
+
       Join us via Zoom: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
     begin: 2024-05-24 13:30:00 +00:00
     end: 2024-05-24 14:30:00 +00:00
