--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -8,11 +8,10 @@ events:
       To add to the meeting agenda the topics you'd like to discuss,
       follow the link: https://hackmd.io/QcgnpSe_SnWx7DmdkGCUSw
 
-      Join us via Zoom:
-      https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
+      Join us via Google Meet: https://meet.google.com/rru-xrax-rps
     begin: 2024-05-24 13:30:00 +00:00
     end: 2024-05-24 14:30:00 +00:00
-    url: https://numfocus-org.zoom.us/j/81082067424?pwd=bVNqWXhqSXZEdTl6ZzFsa1lJZ08xZz09
+    url: https://meet.google.com/rru-xrax-rps
     repeat:
       interval:
         days: 28
