--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -30,9 +30,9 @@ events:
         days: 7
       until: 2025-12-31 00:00:00 +00:00
 
-  - summary: nx-parallel call
+  - summary: "NetworkX's nx-parallel backend call"
     description: |
-      Discussing the future of the nx-parallel backend.
+      Discussing the future of the nx-parallel backend (https://github.com/networkx/nx-parallel).
 
       Meeting link: https://colgate.zoom.us/j/281534728
       Meeting notes: https://hackmd.io/BkTLclPh0
