Update schedule and description of events for new NumPy contributors (#699)
* Update the schedule and description of the events for new NumPy contributors

* Minor edit

--- a/calendars/numpy.yaml
+++ b/calendars/numpy.yaml
@@ -75,26 +75,9 @@ events:
         days: 21
       until: 2025-01-01 00:00:00 +00:00
 
-  - summary: NumPy Newcomers' Hour (Europe/Africa/Asia)
+  - summary: NumPy New Contributors' Hour
     description: |
-      A fortnightly meeting for newcomers to the NumPy contributor community.
-
-      To add to the meeting agenda the topics you’d like to discuss,
-      follow the link: https://hackmd.io/3f3otyyuTte3FU9y3QzsLg
-
-      Join us via Zoom: https://numfocus-org.zoom.us/j/82563808729?pwd=ZFU3Z2dMcXBGb05YemRsaGE1OW5nQT09
-    begin: 2024-06-13 12:00:00 +00:00
-    end: 2024-06-13 13:00:00 +00:00
-    url: https://numfocus-org.zoom.us/j/82563808729?pwd=ZFU3Z2dMcXBGb05YemRsaGE1OW5nQT09
-    repeat:
-      interval:
-        # seconds, minutes, hours, days, weeks, months, years
-        days: 28
-      until: 2025-01-01 00:00:00 +00:00
-
-  - summary: NumPy Newcomers' Hour (Americas/Oceania)
-    description: |
-      A fortnightly meeting for newcomers to the NumPy contributor community.
+      A monthly meeting for new NumPy contributors.
 
       To add to the meeting agenda the topics you’d like to discuss,
       follow the link: https://hackmd.io/3f3otyyuTte3FU9y3QzsLg
