Update the Zoom link in contributor-experience.yaml

--- a/calendars/contributor-experience.yaml
+++ b/calendars/contributor-experience.yaml
@@ -8,10 +8,10 @@ events:
       To add to the meeting agenda the topics you'd like to discuss,
       follow the link: https://hackmd.io/QcgnpSe_SnWx7DmdkGCUSw
 
-      Join us via Zoom: https://us02web.zoom.us/s/82394007198?pwd=zuAd2e6CydecnMSq8DgT0QKCQfUv4E.1
+      Join us via Zoom: https://us02web.zoom.us/j/82394007198
     begin: 2024-12-06 13:30:00 +00:00
     end: 2024-12-06 14:30:00 +00:00
-    url: https://us02web.zoom.us/s/82394007198?pwd=zuAd2e6CydecnMSq8DgT0QKCQfUv4E.1
+    url: https://us02web.zoom.us/j/82394007198
     repeat:
       interval:
         days: 28
@@ -24,7 +24,7 @@ events:
       To add to the meeting agenda the topics you'd like to discuss,
       follow the link: https://hackmd.io/QcgnpSe_SnWx7DmdkGCUSw
 
-      Join us via Zoom: https://us02web.zoom.us/s/82394007198?pwd=zuAd2e6CydecnMSq8DgT0QKCQfUv4E.1
+      Join us via Zoom: https://us02web.zoom.us/j/82394007198
     begin: 2024-11-22 13:30:00 +00:00
     end: 2024-11-22 14:30:00 +00:00
-    url: https://us02web.zoom.us/s/82394007198?pwd=zuAd2e6CydecnMSq8DgT0QKCQfUv4E.1
+    url: https://us02web.zoom.us/j/82394007198
