--- a/calendars/matplotlib.yaml
+++ b/calendars/matplotlib.yaml
@@ -30,7 +30,7 @@ events:
 
     begin: 2023-02-07 19:00:00
     end: 2023-02-07 20:00:00
-    url: https://us06web.zoom.us/j/81285851006?pwd=Tks2QjRkNWh5NGw0TmU1RUwwOVluZz09
+    url: https://numfocus-org.zoom.us/j/88077871096?pwd=bTxkJRug4Lmr8AiR9jNyntxBS4yGDe.1
     ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
 
   - summary: Matplotlib Monthly New Contributors Meeting (Europe/Asia)
@@ -45,7 +45,7 @@ events:
 
     begin: 2023-03-07 13:00:00
     end: 2023-03-07 14:00:00
-    url: https://us06web.zoom.us/j/81285851006?pwd=Tks2QjRkNWh5NGw0TmU1RUwwOVluZz09
+    url: https://numfocus-org.zoom.us/j/88077871096?pwd=bTxkJRug4Lmr8AiR9jNyntxBS4yGDe.1
     ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
 
   - summary: Matplotlib Documentation Meeting
