--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -1,13 +1,13 @@
 name: Data Umbrella Events Calendar
 events:
-  - summary: Polars & Narwhals - Understanding Expressions When You're Used to pandas
+  - summary: Introduction to Git
     description: |
       A fortnightly meeting to share updates on everything
       that is happening in the NumPy community. Everyone is welcome
       to attend and contribute to a conversation.
 
-      Meetup: https://www.meetup.com/data-umbrella/events/304005848/
+      Meetup: https://www.meetup.com/data-umbrella/events/304521945/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
-    begin: 2024-11-19 17:00:00 +00:00
-    end: 2024-11-19 18:00:00 +00:00
+    begin: 2024-12-10 17:00:00 +00:00
+    end: 2024-12-10 18:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
