--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -25,6 +25,7 @@ events:
 
       Meetup: https://www.meetup.com/data-umbrella/events/304005848/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+      Video: https://youtu.be/kPtUPe5Egak
     begin: 2024-11-19 17:00:00 +00:00
     end: 2024-11-19 18:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
