--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -9,6 +9,7 @@ events:
 
       Meetup: https://www.meetup.com/data-umbrella/events/304521945/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+      Video: Will be posted on YT - https://www.youtube.com/@DataUmbrella
     begin: 2024-12-10 17:00:00 +00:00
     end: 2024-12-10 18:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
