--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -2,14 +2,14 @@ name: Data Umbrella Events Calendar
 events:
   - summary: Introduction to Git
     description: |
-      Join us for an introductory session on Git. Discover some 
-      fundamental concepts, explore its practical applications, and 
+      Join us for an introductory session on Git. Discover some
+      fundamental concepts, explore its practical applications, and
       learn how to efficiently use both the command line and the Visual
       Studio Code graphical user interface (GUI).
 
       Meetup: https://www.meetup.com/data-umbrella/events/304521945/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
-      Video: Will be posted on YT - https://www.youtube.com/@DataUmbrella
+      Video: Will be posted on YT https://www.youtube.com/@DataUmbrella
     begin: 2024-12-10 17:00:00 +00:00
     end: 2024-12-10 18:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
@@ -17,10 +17,10 @@ events:
   - summary: Polars & Narwhals - Understanding Expressions When You're Used to pandas
     description: |
       When it comes to dataframes, pandas is the go-to library for
-      many people. Yet Polars is taking the world by storm, and so 
-      many data practitioners are curious about trying it out. There 
-      is a learning curve though, as Polars introduces some concepts 
-      which pandas users might not be familiar with. This talk is a 
+      many people. Yet Polars is taking the world by storm, and so
+      many data practitioners are curious about trying it out. There
+      is a learning curve though, as Polars introduces some concepts
+      which pandas users might not be familiar with. This talk is a
       deep dive into one of those concepts (expressions) and will focus
       on how you can understand them from a pandas perspective.
 
