--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -1,5 +1,16 @@
 name: Data Umbrella Events Calendar
 events:
+  - summary: Make Your Own JupyterLab Extension
+    description: |
+      Make your own JupyterLab extension in this tutorial. JupyterLab is a free and open source, browser based integrated development environment (IDE) that is the successor to Jupyter Notebook. Designed from the core to be extensible, JupyterLab is itself an extension of the Jupyter framework. Since its release, open source developers have contributed hundreds of third party extensions (652 third-party extensions as of 2024-10-15).
+
+      Meetup: https://www.meetup.com/data-umbrella/events/304917194/
+      Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+      Video: https://www.youtube.com/@DataUmbrella
+    begin: 2025-01-07 17:00:00 +00:00
+    end: 2025-01-07 18:00:00 +00:00
+    url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+
   - summary: Introduction to Git
     description: |
       Join us for an introductory session on Git. Discover some
@@ -9,7 +20,7 @@ events:
 
       Meetup: https://www.meetup.com/data-umbrella/events/304521945/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
-      Video: https://www.youtube.com/@DataUmbrella
+      Video: https://youtu.be/edCiPBn_dj8?feature=shared
     begin: 2024-12-10 17:00:00 +00:00
     end: 2024-12-10 18:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
