--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -1,4 +1,5 @@
 name: NetworkX Community Calendar
+timezone: America/New_York
 events:
   - summary: NetworkX Community Call
     description: |
@@ -6,13 +7,13 @@ events:
 
       Meeting link: https://colgate.zoom.us/j/92619161786
       Meeting notes: https://hackmd.io/ea2IhUuqSrG4kM9tokXuEw
-    begin: 2024-10-03 18:00:00 +00:00
-    end: 2024-10-03 19:00:00 +00:00
+    begin: 2025-02-28 11:00:00
+    duration: { minutes: 60 }
     url: https://colgate.zoom.us/j/92619161786
     repeat:
       interval:
         days: 7
-      until: 2025-12-31 00:00:00 +00:00
+      until: 2026-12-31 00:00:00
 
   - summary: NetworkX Dispatching Call
     description: |
@@ -22,13 +23,13 @@ events:
       Meeting notes: https://hackmd.io/rqs_pWMxSLmICXCpI3w-Ug
       Zoom meeting ID: 941 9287 4965
       Zoom meeting passcode: 572126
-    begin: 2024-05-29 17:00:00 +00:00
-    end: 2024-05-29 18:00:00 +00:00
+    begin: 2025-02-25 11:30:00
+    duration: { minutes: 60 }
     url: https://anaconda.zoom.us/j/94192874965?pwd=K0wvcmhXem41ZlVSQ2l4TXlUaDgxdz09
     repeat:
       interval:
         days: 7
-      until: 2025-12-31 00:00:00 +00:00
+      until: 2026-12-31 00:00:00
 
   - summary: "NetworkX's nx-parallel backend call"
     description: |
@@ -36,10 +37,10 @@ events:
 
       Meeting link: https://colgate.zoom.us/j/281534728
       Meeting notes: https://hackmd.io/BkTLclPh0
-    begin: 2024-09-13 15:30:00 +00:00
-    end: 2024-09-13 16:30:00 +00:00
+    begin: 2025-02-14 15:30:00Z
+    duration: { minutes: 60 }
     url: https://colgate.zoom.us/j/281534728
     repeat:
       interval:
         days: 7
-      until: 2025-12-31 00:00:00 +00:00
+      until: 2026-12-31 00:00:00 +00:00
