--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,10 @@
     tar -xf ${DART_SASS_TARBALL} && \
     rm ${DART_SASS_TARBALL} && \
     export PATH=/opt/build/repo/dart-sass:$PATH && \
-    make html \
+    python3 -m pip install nox && \
+    nox -s themes && \
+    nox -s html && \
+    nox -s search
     """
 
 [[plugins]]
