--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build.environment]
   PYTHON_VERSION = "3.13"
   HUGO_VERSION = "0.141.0"
-  NODE_VERSION = "20"
   DART_SASS_VERSION = "1.83.4"
   DART_SASS_URL = "https://github.com/sass/dart-sass/releases/download/"
 
@@ -14,18 +13,10 @@
     tar -xf ${DART_SASS_TARBALL} && \
     rm ${DART_SASS_TARBALL} && \
     export PATH=/opt/build/repo/dart-sass:$PATH && \
-    if ! command -v make &> /dev/null; then apt-get update && apt-get install -y make; fi && \
-    npx --yes pagefind --site public && \
     make html \
     """
 
 [[plugins]]
   package = "netlify-plugin-checklinks"
-
   [plugins.inputs]
-  skipPatterns = [
-    '*bot*',
-    'https://fonts.gstatic.com',
-    'https://fonts.googleapis.com',
-    'https://cdn.jsdelivr.net'
-  ]
+  skipPatterns = ['*bot*', 'https://fonts.gstatic.com', 'https://fonts.googleapis.com', 'https://cdn.jsdelivr.net']
