chore: bump sass version

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   PYTHON_VERSION = "3.13"
   HUGO_VERSION = "0.142.0"
   NODE_VERSION = "20"
+  DART_SASS_VERSION = "1.79.4"
   DART_SASS_URL = "https://github.com/sass/dart-sass/releases/download/"
 
 [build]
