Adjust skimage meeting for DST

--- a/calendars/skimage.yaml
+++ b/calendars/skimage.yaml
@@ -4,14 +4,25 @@ events:
     description: |
       The scikit-image Community Call. Timezone-friendly for Europe/Africa.
 
-      Meeting notes: https://hackmd.io/@scientific-python/HJWUBDVNi
+      Meeting notes: https://hackmd.io/-HCxhoU4RSiC-RzVMyoweg
       Archive: https://github.com/scikit-image/skimage-archive/tree/main/meeting-notes
-    begin: 2022-09-13 18:00:00 +00:00
+    begin: 2022-09-13 17:00:00 +00:00
     duration: { minutes: 60 }
     url: https://meet.evolix.org/skimage-meeting
     repeat:
       interval:
         days: 14
-      # Switch to daylight saving time on 2025-03-30
-      # Move meeting time to 17:00 UTC after that
-      until: 2025-03-29 00:00:00 +00:00
+      until: 2025-11-01 00:00:00 +00:00
+  - summary: scikit-image Community Call (Europe/Africa)
+    description: |
+      The scikit-image Community Call. Timezone-friendly for Europe/Africa.
+
+      Meeting notes: https://hackmd.io/-HCxhoU4RSiC-RzVMyoweg
+      Archive: https://github.com/scikit-image/skimage-archive/tree/main/meeting-notes
+    begin: 2025-11-04 18:00:00 +00:00
+    duration: { minutes: 60 }
+    url: https://meet.evolix.org/skimage-meeting
+    repeat:
+      interval:
+        days: 14
+      until: 2026-03-07 00:00:00 +00:00
