--- a/content/about/community-leaders.toml
+++ b/content/about/community-leaders.toml
@@ -1,49 +1,49 @@
 [[item]]
 type = 'card'
 classcard = 'text-center'
-body = '''{{< image >}}
-src = 'https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4"'
-alt = 'Avatar of Brigitta Sipőcz'
-{{< /image >}}
+body = '''{{< image
+    src="https://avatars.githubusercontent.com/u/6788290?u=d9a388224b87d55106cb3e6199d02ebc1d8e0553&v=4\""
+    alt="Avatar of Brigitta Sipőcz"
+>}}
 Brigitta Sipőcz'''
 link = 'https://github.com/bsipocz'
 
 [[item]]
 type = 'card'
 classcard = 'text-center'
-body = '''{{< image >}}
-src = 'https://avatars.githubusercontent.com/u/123428?v=4"'
-alt = 'Avatar of Jarrod Millman'
-{{< /image >}}
+body = '''{{< image
+    src="https://avatars.githubusercontent.com/u/123428?v=4\""
+    alt="Avatar of Jarrod Millman"
+>}}
 Jarrod Millman'''
 link = 'https://github.com/jarrodmillman'
 
 [[item]]
 type = 'card'
 classcard = 'text-center'
-body = '''{{< image >}}
-src = 'https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4"'
-alt = 'Avatar of Juanita Gomez'
-{{< /image >}}
+body = '''{{< image
+    src="https://avatars.githubusercontent.com/u/18587879?u=83f10fabe466ae8e7052c03c5e6e9cde684a4e10&v=4\""
+    alt="Avatar of Juanita Gomez"
+>}}
 Juanita Gomez'''
 link = 'https://github.com/juanis2112'
 
 [[item]]
 type = 'card'
 classcard = 'text-center'
-body = '''{{< image >}}
-src = 'https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4"'
-alt = 'Avatar of Stefan van der Walt'
-{{< /image >}}
+body = '''{{< image
+    src="https://avatars.githubusercontent.com/u/45071?u=c779b5e06448fbc638bc987cdfe305c7f9a7175e&v=4\""
+    alt="Avatar of Stefan van der Walt"
+>}}
 Stefan van der Walt'''
 link = 'https://github.com/stefanv'
 
 [[item]]
 type = 'card'
 classcard = 'text-center'
-body = '''{{< image >}}
-src = 'https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4"'
-alt = 'Avatar of Pamphile Roy'
-{{< /image >}}
+body = '''{{< image
+    src="https://avatars.githubusercontent.com/u/23188539?u=64445b52dbf3f75de8006ed4264fdd2afaed97a3&v=4\""
+    alt="Avatar of Pamphile Roy"
+>}}
 Pamphile Roy'''
 link = 'https://github.com/tupui'
