Fix "Narwahls" typo

--- a/calendars/narwhals.yaml
+++ b/calendars/narwhals.yaml
@@ -1,4 +1,4 @@
-name: Narhwals Community Calendar
+name: Narwhals Community Calendar
 events:
   - summary: Narwhals Community Call
     description: |
