Renaming SP calendar

--- a/calendars/scientific-python.yaml
+++ b/calendars/scientific-python.yaml
@@ -1,4 +1,4 @@
-name: Scientific Python Learn & Lectures
+name: Scientific Python Community Calls
 events:
   - summary: Scientific Python Learn & Lectures sites
     description: |
