--- a/calendars/data-umbrella.yaml
+++ b/calendars/data-umbrella.yaml
@@ -1,14 +1,25 @@
 name: Data Umbrella Events Calendar
 events:
+  - summary: A Tutorial for Getting Started with PyMC
+    description: |
+      This one-hour tutorial introduces new users to version 5 of PyMC, a powerful Python, open source library for probabilistic programming and Bayesian statistical modeling. Participants will learn the fundamentals of PyMC, best practices for installation and setup, and gain hands-on experience building their first Bayesian model.
+
+      Meetup: https://www.meetup.com/data-umbrella/events/310039714/
+      Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+      Video: https://www.youtube.com/@DataUmbrella
+    begin: 2025-08-12 16:00:00 +00:00
+    end: 2025-08-12 17:00:00 +00:00
+    url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
+
   - summary: Contributing to the NumPy Documentation
     description: |
       NumPy is a fundamental, open-source Python library for N-dimensional array programming used extensively for data analysis and scientific programming. As a community-driven project, NumPy is mainly sustained by open-source contributions. This talk focuses on avenues of contribution to the project documentation, an integral part of the software.
 
       Meetup: https://www.meetup.com/data-umbrella/events/308629209/
       Webinarlink: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
-      Video: https://www.youtube.com/@DataUmbrella
-    begin: 2025-07-15 17:00:00 +00:00
-    end: 2025-07-15 18:00:00 +00:00
+      Video: https://youtu.be/wZmTzfhiu34
+    begin: 2025-07-15 16:00:00 +00:00
+    end: 2025-07-15 17:00:00 +00:00
     url: https://www.bigmarker.com/neo4j/Data-Umbrella-Webinar
 
   - summary: Make Your Own JupyterLab Extension
