CAL: adding calendar entry for SP Tools call

--- a/calendars/scientific-python.yaml
+++ b/calendars/scientific-python.yaml
@@ -8,3 +8,16 @@ events:
     duration: { minutes: 60 }
     url: https://washington.zoom.us/j/92404931842
     ics: RRULE:FREQ=MONTHLY;BYDAY=3TU;INTERVAL=1
+
+  - summary: Scientific Python Tools
+    description: |
+      Bimonthly community meeting to discuss and work on tools hosted and
+      maintaiend within the Scientific Python Project.
+
+      Meeting Link:  https://caltech.zoom.us/meetings/86722664109/invitations?signature=-8E86H4IwZALVvlVrwg20JPQcpqM1yoJsycGDcrYS18
+
+      Meeting notes: https://hackmd.io/@bsipocz/SP_tools_meeting
+    begin: 2025-09-02 16:00:00 +00:00
+    duration: { minutes: 60 }
+    url: https://caltech.zoom.us/meetings/86722664109/invitations?signature=-8E86H4IwZALVvlVrwg20JPQcpqM1yoJsycGDcrYS18
+    ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
