--- a/calendars/scientific-python.yaml
+++ b/calendars/scientific-python.yaml
@@ -4,6 +4,9 @@ events:
     description: |
       Discussions around how to organize learning material for
       Scientific Python.
+
+      Meeting Link: https://washington.zoom.us/j/92404931842
+      Meeting notes: https://hackmd.io/zVZtDmAvRduUY5zg0giMkg?both
     begin: 2025-07-15 16:00:00 +00:00
     duration: { minutes: 60 }
     url: https://washington.zoom.us/j/92404931842
@@ -15,7 +18,6 @@ events:
       maintaiend within the Scientific Python Project.
 
       Meeting Link:  https://caltech.zoom.us/meetings/86722664109/invitations?signature=-8E86H4IwZALVvlVrwg20JPQcpqM1yoJsycGDcrYS18
-
       Meeting notes: https://hackmd.io/@bsipocz/SP_tools_meeting
     begin: 2025-09-02 16:00:00 +00:00
     duration: { minutes: 60 }
