Add tools meeting

--- a/calendars/tools.yaml
+++ b/calendars/tools.yaml
@@ -1,9 +1,9 @@
-name: SPEC Steering Committee
+name: Tools Steering Committee
 timezone: America/Los_Angeles
 events:
-  - summary: SPEC Planning Meeting
+  - summary: Tools Planning Meeting
     description: |
-      This is the monthly meeting for the SPECs Steering Committee.
+      This is the bimonthly meeting for the Tools Steering Committee.
 
       Meeting Link:  https://ucsc.zoom.us/j/98441337155?pwd=Mjl6TjdRTTNBc3ZGQzE3MTQyRVkyZz09
       Meeting notes: https://hackmd.io/WPTkRnNtSOeF7OhUTRHDwA
