--- a/calendars/sunpy.yaml
+++ b/calendars/sunpy.yaml
@@ -1,13 +1,12 @@
 name: SunPy Community Calendar
 events:
-  - summary: SunPy Community Call (weekly)
+  - summary: SunPy Community Call
     description: |
       The weekly community call for the SunPy Project.
       It is always at 5pm British Time (UTC+1 in the summer, UTC in the winter) on Wednesdays.
-    begin: 2022-07-20 17:00:00 +00:00
-    end: 2022-07-20 18:00:00 +00:00
+    begin: 2022-07-20 16:00:00 +00:00
+    end: 2022-07-20 17:00:00 +00:00
     url: https://sunpy.org/meeting
     repeat:
       interval:
         days: 7
-      until: 2050-01-01 00:00:00 +00:00
