--- a/calendars/sunpy.yaml
+++ b/calendars/sunpy.yaml
@@ -7,7 +7,5 @@ events:
     begin: 2022-07-20 16:00:00 +00:00
     end: 2022-07-20 17:00:00 +00:00
     url: https://sunpy.org/meeting
-    repeat:
-      interval:
-        days: 7
+ics: RRULE:FREQ=WEEKLY;BYDAY=WE;INTERVAL=1
       until: 2050-01-01 00:00:00 +00:00
