--- a/calendars/sunpy.yaml
+++ b/calendars/sunpy.yaml
@@ -1,13 +1,10 @@
 name: SunPy Community Calendar
 events:
-  - summary: Weekly SunPy Community Call
+  - summary: SunPy Community Call
     description: |
-      The weekly call for the SunPy community.
-      Agenda: https://sunpy.org/community_meeting_agenda
+      The weekly community call for the SunPy Project.
+      It is always at 5pm British Time (UTC+1 in the summer, UTC in the winter) on Wednesdays.
     begin: 2022-07-20 16:00:00 +00:00
-    end: 2022-07-20 17:00:00 +00:00
-    url: https://sunpy.org/jitsi
-    repeat:
-      interval:
-        days: 7
-      until: 2025-01-01 00:00:00 +00:00
+    duration: { minutes: 60 }
+    url: https://sunpy.org/meeting
+    ics: RRULE:FREQ=WEEKLY;BYDAY=WE;INTERVAL=1
