--- a/calendars/scientific-python.yaml
+++ b/calendars/scientific-python.yaml
@@ -14,7 +14,7 @@ events:
   - summary: Scientific Python Tools
     description: |
       Bimonthly community meeting to discuss and work on tools hosted and
-      maintaiend within the Scientific Python Project.
+      maintained within the Scientific Python Project.
 
       Meeting Link: https://berkeley.zoom.us/my/scientificpython
       Meeting notes: https://hackmd.io/@bsipocz/SP_tools_meeting
