--- a/calendars/specs.yaml
+++ b/calendars/specs.yaml
@@ -6,7 +6,7 @@ events:
 
       Meeting Link:  https://ucsc.zoom.us/j/98441337155?pwd=Mjl6TjdRTTNBc3ZGQzE3MTQyRVkyZz09
       Meeting notes: https://hackmd.io/WPTkRnNtSOeF7OhUTRHDwA
-    begin: 2025-10-07 17:00:00
-    end: 2025-10-07 18:00:00
+    begin: 2025-12-02 17:00:00 +00:00
+    duration: { minutes: 60 }
     url: https://ucsc.zoom.us/j/98441337155?pwd=Mjl6TjdRTTNBc3ZGQzE3MTQyRVkyZz09
     ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
