Try building in Python venv

--- a/netlify.toml
+++ b/netlify.toml
@@ -12,6 +12,8 @@
     tar -xf ${DART_SASS_TARBALL} && \
     rm ${DART_SASS_TARBALL} && \
     export PATH=/opt/build/repo/dart-sass:$PATH && \
+    python -m venv .py3 && \
+    source .py3/bin/activate && \
     make html \
     """
 
