--- a/netlify.toml
+++ b/netlify.toml
@@ -12,10 +12,12 @@
     tar -xf ${DART_SASS_TARBALL} && \
     rm ${DART_SASS_TARBALL} && \
     export PATH=/opt/build/repo/dart-sass:$PATH && \
+    python -m venv .py3 && \
+    source .py3/bin/activate && \
     make html \
     """
 
 [[plugins]]
   package = "netlify-plugin-checklinks"
   [plugins.inputs]
-  skipPatterns = ['*bot*', 'https://fonts.gstatic.com', 'https://fonts.googleapis.com', 'https://cdn.jsdelivr.net']
+  skipPatterns = ['*bot*', 'https://fonts.gstatic.com', 'https://fonts.googleapis.com', 'https://cdn.jsdelivr.net', 'https://cdnjs.cloudflare.com']
