Fix calendar widget timezone display
This requires a manual compilation of fullcalendar. See inline
comments in `layouts/calendars/list.html` for details.

xref: https://github.com/fullcalendar/fullcalendar/pull/7450
xref: https://github.com/fullcalendar/fullcalendar/issues/7456

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,7 +37,13 @@ repos:
     hooks:
       - id: codespell
         args:
-          ["-L", "recuse,nd,coo", "-w", "--skip=static/teams/bots-graphs.html"]
+          [
+            "-L",
+            "recuse,nd,coo",
+            "-w",
+            "--skip=static/teams/bots-graphs.html",
+            "--skip=static/js-non-bundled/*",
+          ]
 
 ci:
   autofix_prs: false
