--- a/calendars/scientific-python.yaml
+++ b/calendars/scientific-python.yaml
@@ -1,4 +1,5 @@
 name: Scientific Python Community Calls
+timezone: America/Los_Angeles
 events:
   - summary: Scientific Python Learn & Lectures sites
     description: |
@@ -7,7 +8,7 @@ events:
 
       Meeting Link: https://berkeley.zoom.us/my/scientificpython
       Meeting notes: https://hackmd.io/zVZtDmAvRduUY5zg0giMkg?both
-    begin: 2025-07-15 17:00:00 +00:00
+    begin: 2025-07-15 09:00:00
     duration: { minutes: 60 }
     ics: RRULE:FREQ=MONTHLY;BYDAY=3TU;INTERVAL=1
 
@@ -18,6 +19,6 @@ events:
 
       Meeting Link: https://berkeley.zoom.us/my/scientificpython
       Meeting notes: https://hackmd.io/@bsipocz/SP_tools_meeting
-    begin: 2025-09-02 17:00:00 +00:00
+    begin: 2025-09-02 09:00:00
     duration: { minutes: 60 }
     ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
