--- a/calendars/specs.yaml
+++ b/calendars/specs.yaml
@@ -1,4 +1,5 @@
 name: SPEC Steering Committee
+timezone: America/Los_Angeles
 events:
   - summary: SPEC Planning Meeting
     description: |
@@ -6,7 +7,7 @@ events:
 
       Meeting Link:  https://ucsc.zoom.us/j/98441337155?pwd=Mjl6TjdRTTNBc3ZGQzE3MTQyRVkyZz09
       Meeting notes: https://hackmd.io/WPTkRnNtSOeF7OhUTRHDwA
-    begin: 2025-12-02 17:00:00 +00:00
+    begin: 2025-12-02 09:00:00
     duration: { minutes: 60 }
     url: https://berkeley.zoom.us/my/scientificpython
     ics: RRULE:FREQ=MONTHLY;BYDAY=1TU;INTERVAL=2
