--- a/calendars/sparse-array.yaml
+++ b/calendars/sparse-array.yaml
@@ -1,14 +1,15 @@
 name: Sparse Arrays WG
+timezone: America/New_York
 events:
   - summary: Sparse Array Work Session
     description: |
       Meeting Link:  https://meet.google.com/jrp-qgcf-nxh
       Meeting notes: https://hackmd.io/9UCjKdRUTEeoS8KdQNll-A
 
-    begin: 2024-01-08 11:00:00 -07:00
+    begin: 2024-01-08 14:00:00
     duration: { minutes: 60 }
     url: https://meet.google.com/jrp-qgcf-nxh
     repeat:
       interval:
         days: 14
-      until: 2026-12-31 00:00:00 -07:00
+      until: 2026-12-31 00:00:00
